# cromwells1-AIRL-Alpha-Predictor

./: .gitignore  DOCKER_README.md  INSTALL_DOCKER.md  README.md  Report.md  Report2.md  Report3.md  Report4.md  Report7.md  ReportX4.1.md  ReportX4.3.md  ReportX4.4.md  ReportX4.5.md  ReportX4.6.md  ReportX4.7.md  SYSTEM_STATUS.md  build.sh  deploy.sh  docker-compose.yml  main.py  polish.md
config/: .env.example  config.yaml
docs/: ARCHITECTURE.md
java-backend/: Dockerfile  pom.xml
java-backend/src/main/java/com/financial/backend/: Main.java
java-backend/src/main/java/com/financial/backend/api/: EquityApiServer.java
java-backend/src/main/java/com/financial/backend/model/: AlphaResult.java  EquityData.java
java-backend/src/main/java/com/financial/backend/processor/: FeatureEngineer.java
java-backend/src/main/java/com/financial/backend/service/: RedisService.java
java-backend/src/test/java/com/financial/backend/processor/: FeatureEngineerTest.java
java-backend/src/test/java/com/financial/backend/service/: RedisServiceTest.java
rust-model/: Cargo.toml  Dockerfile
rust-model/src/: betafish_search.rs  decision_tree.rs  exa_search.rs  gaussian_copula.rs  lib.rs  lib_tests.rs  main.rs  random_forest.rs  types.rs
src/: __init__.py  pipeline.py
src/ui/: dashboard.html
src/utils/: __init__.py  config.py  logger.py
