[package]
name = "rust-model"
version = "1.0.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.32"
statrs = "0.16"
thiserror = "1.0"
rayon = "1.8"
fastrand = "2.0"
chrono = "0.4"

[features]
default = []

[dev-dependencies]
criterion = "0.5"
